# doomed

./: .gitignore  com.github.hezral.doomed.yml  meson.build
data/: application.css  com.github.hezral.doomed.appdata.xml.in  com.github.hezral.doomed.desktop.in  com.github.hezral.doomed.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: cpu_usage.py  doomed.in  main.py  meson.build  window.py
